Name:                Bucketeer
Version:             0.0.0
Description:         HTTP service for leaky bucket style rate limiting
License:             MIT
License-file:        LICENSE
Author:              Michael Xavier
Copyright:           Copyright: (c) 2012 Michael Xavier
Maintainer:          michael@michaelxavier.net
Build-Type:          Simple
Cabal-Version:       >= 1.6
extra-source-files:  README.md

Executable bucketeer
  Main-is:           Bucketeer/WebServer/Main.hs
  Build-Depends:     aeson                == 0.6.*,
                     attoparsec           == 0.10.*,
                     base                 >= 3 && < 5,
                     bytestring           == 0.9.*,
                     hashable             == 1.*,
                     http-types           == 0.6.*,
                     hedis                == 0.4.*,
                     text                 == 0.11.*,
                     unbounded-delays     == 0.1.*,
                     unordered-containers >= 0.2.1 && < 0.3,
                     wai                  == 1.1.*,
                     wai-extra            == 1.1.*,
                     warp                 == 1.1.*,
                     yesod                == 0.10.*,
                     yesod-core           == 0.10.*
                     
  GHC-Options: -Wall -O3 -threaded

Test-Suite test-bucketeer
  Type: exitcode-stdio-1.0
  Main-Is: Bucketeer/Testing/Main.hs
  Build-Depends:  haskell98 >= 1.1.0.1 && < 1.2,
                  hspec     == 0.9.*,
                  HUnit     == 1.2.*
